force-app/main/default/objects/Asset__c/fields/SIM_Card_Provider__c.field-meta.xml
<CustomField>
    <fullName>SIM_Card_Provider__c</fullName>
    <description>Used for DE - Express Terminal info (SP-1763)</description>
    <label>SIM Card Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D1</fullName>
            </value>
            <value>
                <fullName>O2</fullName>
            </value>
            <value>
                <fullName>Vodafone</fullName>
            </value>
            <value>
                <fullName>Datamobile</fullName>
            </value>
            <value>
                <fullName>DU</fullName>
            </value>
            <value>
                <fullName>Etisalat</fullName>
            </value>
            <value>
                <fullName>Virgin</fullName>
            </value>
            <value>
                <fullName>SWYP</fullName>
            </value>
            <value>
                <fullName>Ooredoo</fullName>
            </value>
            <value>
                <fullName>Omantel</fullName>
            </value>
            <value>
                <fullName>Zain</fullName>
            </value>
            <value>
                <fullName>Viva</fullName>
            </value>
            <value>
                <fullName>STC (Jawwy)</fullName>
            </value>
            <value>
                <fullName>Mobily</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>