force-app/main/default/objects/Asset__c/fields/Source_Asset__c.field-meta.xml
<CustomField>
    <fullName>Source_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset__c.Type__c</field>
            <operation>equals</operation>
            <value>Original</value>
        </filterItems>
        <filterItems>
            <field>Asset__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Taken Over</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>RelatedAssets</relationshipName>
    <type>Lookup</type>
</CustomField>