force-app/main/default/objects/Asset__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New - Awaiting Shipping</fullName>
            </value>
            <value>
                <fullName>Sent - Awaiting Activation</fullName>
            </value>
            <value>
                <fullName>Activated Successfully</fullName>
            </value>
            <value>
                <fullName>Activated but not in use</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>Returned Shipment</fullName>
            </value>
            <value>
                <fullName>Takeover</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Exchange Requested</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>New - Deposit awaited</fullName>
            </value>
            <value>
                <fullName>Awaiting Delivery</fullName>
            </value>
            <value>
                <fullName>Cancelled before Shipment</fullName>
            </value>
            <value>
                <fullName>Cancel Additional Charge</fullName>
            </value>
            <value>
                <fullName>Redeliver</fullName>
            </value>
            <value>
                <fullName>Replacement Requested</fullName>
            </value>
            <value>
                <fullName>Waiting For Replacement</fullName>
            </value>
            <value>
                <fullName>Delivered - Activation Needed</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>InTransit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>