force-app/main/default/objects/Asset__c/fields/Stock_Item_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Stock_Item_Serial_No__c</fullName>
    <label>Stock Item Serial No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>