force-app/main/default/objects/Asset__c/fields/Takeover_Information__c.field-meta.xml
<CustomField>
    <fullName>Takeover_Information__c</fullName>
    <label>Takeover Information</label>
    <type>TextArea</type>
</CustomField>