force-app/main/default/objects/Asset__c/fields/Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number__c</fullName>
    <description>Field used in Old Org for Express Boxes - SP-1763</description>
    <label>Telephone Number</label>
    <type>Phone</type>
</CustomField>