force-app/main/default/objects/Asset__c/fields/Terminal_PIC__c.field-meta.xml
<CustomField>
    <fullName>Terminal_PIC__c</fullName>
    <description>Terminal person in charge for KR</description>
    <inlineHelpText>Terminal person in charge</inlineHelpText>
    <label>Terminal P.I.C</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>강정현</fullName>
            </value>
            <value>
                <fullName>김유정</fullName>
            </value>
            <value>
                <fullName>남호정</fullName>
            </value>
            <value>
                <fullName>박민제</fullName>
            </value>
            <value>
                <fullName>박소현</fullName>
            </value>
            <value>
                <fullName>배현진</fullName>
            </value>
            <value>
                <fullName>서상철</fullName>
            </value>
            <value>
                <fullName>오영주</fullName>
            </value>
            <value>
                <fullName>황지은</fullName>
            </value>
            <value>
                <fullName>노경미</fullName>
            </value>
            <value>
                <fullName>김진아</fullName>
            </value>
            <value>
                <fullName>최정인</fullName>
            </value>
            <value>
                <fullName>온라인 필요</fullName>
            </value>
            <value>
                <fullName>온라인 완료</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>