force-app/main/default/objects/Asset__c/fields/Tracking_Active__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tracking Active</label>
    <type>Checkbox</type>
</CustomField>