force-app/main/default/objects/Asset__c/fields/Tracking_Exception__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Exception__c</fullName>
    <label>Tracking Exception</label>
    <type>TextArea</type>
</CustomField>