force-app/main/default/objects/Asset__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>The tracking number given by the shipping company</description>
    <inlineHelpText>The tracking number given by the shipping company</inlineHelpText>
    <label>Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>