force-app/main/default/objects/Asset__c/fields/TransmissionApprovedReplacements__c.field-meta.xml
<CustomField>
    <fullName>TransmissionApprovedReplacements__c</fullName>
    <label>TransmissionApprovedReplacements</label>
    <summaryFilterItems>
        <field>Replacement_Order__c.Status__c</field>
        <operation>equals</operation>
        <value>Transmission-Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Replacement_Order__c.Id_Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>