force-app/main/default/objects/Asset__c/fields/TransmissionNotApproved__c.field-meta.xml
<CustomField>
    <fullName>TransmissionNotApproved__c</fullName>
    <label>TransmissionNotApproved</label>
    <summaryFilterItems>
        <field>Replacement_Order__c.Status__c</field>
        <operation>contains</operation>
        <value>New</value>
    </summaryFilterItems>
    <summaryForeignKey>Replacement_Order__c.Id_Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>