force-app/main/default/objects/Asset__c/recordTypes/AT_Asset.recordType-meta.xml
<RecordType>
    <fullName>AT_Asset</fullName>
    <active>true</active>
    <label>AT Asset</label>
</RecordType>