force-app/main/default/objects/Asset__c/recordTypes/CD_Asset.recordType-meta.xml
<RecordType>
    <fullName>CD_Asset</fullName>
    <active>true</active>
    <label>CD Asset</label>
</RecordType>