force-app/main/default/objects/Asset__c/recordTypes/CZ_Asset.recordType-meta.xml
<RecordType>
    <fullName>CZ_Asset</fullName>
    <active>true</active>
    <description>Czech Republic Asset</description>
    <label>CZ Asset</label>
</RecordType>