force-app/main/default/objects/Asset__c/recordTypes/DE_Asset.recordType-meta.xml
<RecordType>
    <fullName>DE_Asset</fullName>
    <active>true</active>
    <label>DE Asset</label>
</RecordType>