force-app/main/default/objects/Asset__c/recordTypes/DH_AU_Asset.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Asset</fullName>
    <active>true</active>
    <label>DH AU Asset</label>
</RecordType>