force-app/main/default/objects/Asset__c/recordTypes/FI_Asset.recordType-meta.xml
<RecordType>
    <fullName>FI_Asset</fullName>
    <active>true</active>
    <label>FI Asset</label>
</RecordType>