force-app/main/default/objects/Asset__c/recordTypes/FP_Asset.recordType-meta.xml
<RecordType>
    <fullName>FP_Asset</fullName>
    <active>true</active>
    <label>FP Asset</label>
</RecordType>