force-app/main/default/objects/Asset__c/recordTypes/HU_Asset.recordType-meta.xml
<RecordType>
    <fullName>HU_Asset</fullName>
    <active>true</active>
    <description>Hungary Asset</description>
    <label>HU Asset</label>
</RecordType>