force-app/main/default/objects/Asset__c/recordTypes/PY_Asset.recordType-meta.xml
<RecordType>
    <fullName>PY_Asset</fullName>
    <active>true</active>
    <description>Record Type For PedidosYa but to be applied globally in future</description>
    <label>PY_Asset</label>
</RecordType>