force-app/main/default/objects/Asset__c/recordTypes/SE_Asset.recordType-meta.xml
<RecordType>
    <fullName>SE_Asset</fullName>
    <active>true</active>
    <label>SE Asset</label>
</RecordType>