force-app/main/default/objects/Asset__c/recordTypes/Talabat_Asset.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Asset</fullName>
    <active>true</active>
    <label>Talabat Asset</label>
</RecordType>