force-app/main/default/objects/Asset__c/recordTypes/UK_Asset.recordType-meta.xml
<RecordType>
    <fullName>UK_Asset</fullName>
    <active>true</active>
    <label>UK Asset</label>
</RecordType>