force-app/main/default/objects/Asset__c/recordTypes/Yogiyo_Asset.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Asset</fullName>
    <active>true</active>
    <label>Yogiyo Asset</label>
</RecordType>