force-app/main/default/objects/Asset__c/validationRules/TLB_Mandatory_Stock_Serial_No.validationRule-meta.xml
<ValidationRule>
    <fullName>TLB_Mandatory_Stock_Serial_No</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Talabat_Asset&quot;
&amp;&amp; ISPICKVAL(Status__c, &quot;Activated Successfully&quot;)
&amp;&amp; ISBLANK( Stock_Item_Serial_No__c )
&amp;&amp;   ISPICKVAL( Id_Opportunity_Quote_Line_Item__r.Sub_type__c ,&quot;Hardware&quot;)</errorConditionFormula>
    <errorDisplayField>Stock_Item_Serial_No__c</errorDisplayField>
    <errorMessage>Please fill out the &quot;Stock Item Serial No&quot;</errorMessage>
</ValidationRule>