force-app/main/default/objects/Asset__c/validationRules/Validation_Rule_Activated_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_Activated_Date</fullName>
    <active>false</active>
    <description>SFS-5432</description>
    <errorConditionFormula>OR(RecordType.DeveloperName =&quot;UK_Asset&quot;,RecordType.DeveloperName =&quot;CZ_Asset&quot;)
&amp;&amp;
ISPICKVAL(Status__c, &quot;Activated Successfully&quot;)
&amp;&amp;
ISBLANK( Activation_Date__c )</errorConditionFormula>
    <errorDisplayField>Activation_Date__c</errorDisplayField>
    <errorMessage>Please fill out the &quot;Activation Date&quot;</errorMessage>
</ValidationRule>