force-app/main/default/objects/Asset__c/validationRules/Validation_Rule_Exchanged_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_Exchanged_Status</fullName>
    <active>false</active>
    <errorConditionFormula>AND (ISPICKVAL ( Status__c, &quot;Exchange Requested&quot;), 
OR( Retour_in_Progress__c = FALSE, ISBLANK ( Return_Due_Date__c ), ISBLANK( Retour_Shipping_Company__c ), ISBLANK( Retour_Tracking_Number__c ), ISPICKVAL( Number_of_Retours__c , &quot;&quot; ), ISPICKVAL( Return_Status__c , &quot;&quot; ), ISBLANK( Retour_Date__c )))</errorConditionFormula>
    <errorMessage>Please fill out all required fields: &quot;Return Due Date&quot;, &quot;Return Shipping Company&quot;, &quot;Return Tracking Number&quot;, &quot;Number or Returns&quot;, &quot;Return Status&quot;, &quot;Return Request Date&quot; and &quot;Return in Progress&quot;</errorMessage>
</ValidationRule>