force-app/main/default/objects/Asset__c/listViews/AT_Assets_activated.listView-meta.xml
<ListView>
    <fullName>AT_Assets_activated</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>AT-Assets activated</label>
    <sharedTo>
        <role>AT_Account_Management</role>
        <role>AT_Management</role>
        <role>AT_Sales_Team</role>
    </sharedTo>
</ListView>