force-app/main/default/objects/Asset__c/listViews/AU_Express_Printer_Invoicing.listView-meta.xml
<ListView>
    <fullName>AU_Express_Printer_Invoicing</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Migration_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Deposit_Paid__c</columns>
    <columns>Salesforce_Id__c</columns>
    <columns>No_of_Powerplugs__c</columns>
    <filterScope>Everything</filterScope>
    <label>AU - Express Printer - Invoicing</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>DH_AU_Management</roleAndSubordinates>
    </sharedTo>
</ListView>