force-app/main/default/objects/Asset__c/listViews/AUActivation_Successful.listView-meta.xml
<ListView>
    <fullName>AUActivation_Successful</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Activation_Date__c</columns>
    <columns>Stock_Item__c</columns>
    <columns>Date_Shipped__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Activated Successfully</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset__c.DH_AU_Asset</value>
    </filters>
    <label>03. Activated Successfully_AU</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>DH_AU_Management</roleAndSubordinates>
    </sharedTo>
</ListView>