force-app/main/default/objects/Asset__c/listViews/Cancellation_To_Collect_Yogiyo.listView-meta.xml
<ListView>
    <fullName>Cancellation_To_Collect_Yogiyo</fullName>
    <columns>NAME</columns>
    <columns>Company_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Retour_Date__c</columns>
    <columns>Return_Due_Date__c</columns>
    <columns>Returned_Reason__c</columns>
    <columns>Person_In_Charge_Return__c</columns>
    <columns>Stock_Item__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancellation - To Collect</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset__c.Yogiyo_Asset</value>
    </filters>
    <label>YGY - 04. Cancellation - To Collect</label>
    <language>en_US</language>
    <sharedTo>
        <role>Yogiyo_Local_Admin</role>
        <roleAndSubordinates>Yogiyo_Customer_Car_Management</roleAndSubordinates>
    </sharedTo>
</ListView>