force-app/main/default/objects/Asset__c/listViews/CD_Activated_but_not_in_use.listView-meta.xml
<ListView>
    <fullName>CD_Activated_but_not_in_use</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset__c.CD_Asset</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>not in use</value>
    </filters>
    <label>CD - Activated but not in use</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>CD_Management</roleAndSubordinates>
    </sharedTo>
</ListView>