force-app/main/default/objects/Asset__c/listViews/CD_Assets_Awaiting_Activation.listView-meta.xml
<ListView>
    <fullName>CD_Assets_Awaiting_Activation</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset__c.CD_Asset</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sent - Awaiting Activation</value>
    </filters>
    <label>CD - Assets - Awaiting Activation</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>CD_Management</roleAndSubordinates>
    </sharedTo>
</ListView>