force-app/main/default/objects/Asset__c/listViews/CD_Assets_Awaiting_Shipment.listView-meta.xml
<ListView>
    <fullName>CD_Assets_Awaiting_Shipment</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Activation_Date__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Stock_Item__c</columns>
    <columns>Stock_Item_Serial_No__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset__c.CD_Asset</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New - Awaiting Shipping</value>
    </filters>
    <label>CD - Assets - Awaiting Shipment</label>
    <language>en_US</language>
    <sharedTo>
        <role>CD_Customer_Care_Management</role>
        <roleAndSubordinates>CD_Management</roleAndSubordinates>
    </sharedTo>
</ListView>